Fix alignment of menu arrow icon

--- a/src/table.css
+++ b/src/table.css
@@ -85,6 +85,8 @@ thead th {
                 width: -moz-available;          /* WebKit-based browsers will ignore this. */
                 width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
                 width: fill-available;
+                display: flex;
+                align-items: center;
 
                 &::after {
                     font-family: "Font Awesome 5 Pro";
